# mynotebooks

./: .gitignore  hello.ipynb
lesson-03/: additional_practice.ipynb  evenoddtests.ipynb  hello.ipynb  leapyear.ipynb  pixi.toml  practice_session.ipynb  test.py
lesson-05/: lesson.ipynb
lesson-06/: lesson-06.ipynb  mathplotlibexamples.ipynb  optional-functions-practice (1).ipynb  optional-functions-practice.ipynb  practice-algebra-statistics-python.ipynb  pyproject.toml
lesson-07/: in-class-python-review.ipynb  lesson.ipynb  pyproject.toml
lesson-08/: lesson.ipynb  pyproject.toml
lesson-09/: david_fekke_unit1_capstone.ipynb  incremental-capstone-unit-1.ipynb  oop-classes-practice.ipynb  practice_classes_objects.ipynb  probability-practice.ipynb  pyproject.toml  sample.ipynb
lesson-10/: algebra-statistics-python-practice.ipynb  oop-classes-practice.ipynb  pyproject.toml  sample.ipynb
lesson-11/: advanced-math-concepts-practice.ipynb  pyproject.toml  sample.ipynb  unit1-overview-in-class-practice.ipynb
lesson-12/: data-science-intro-practice.ipynb  pyproject.toml  sample.ipynb
lesson-13/: pyproject.toml  titanic-data-explorer-practice.ipynb
lesson-14/: pyproject.toml  sample.ipynb  superstore-practice.ipynb  titanic-data-visualization-practice.ipynb
lesson-15/: feature-engineering-practice.ipynb  pyproject.toml
lesson-16/: feature-engineering-practice.ipynb  first_model-linreg.ipynb  pixi.toml  sample.ipynb  second_model_linreq.ipynb
lesson-17/: HousePricer.mlmodel  HousePricer.onnx  data-science-process-practice.ipynb  linear_regression.ipynb  onnxtest.js  package-lock.json  package.json  pixi.toml  trucks_validation.csv  used_sedans.csv  used_trucks.csv
lesson-18/: eda-practice.ipynb  incremental-capstone-unit-2.ipynb  pixi.toml  sample.ipynb
lesson-19/: ml-data-prep-practice.ipynb  pixi.toml
lesson-20/: pixi.toml  sampleapp.ipynb
lesson-21/: capstone-dataset-guide.html  car_prices.csv  classification-algorithms-walkthrough.ipynb  ensemble-learning.ipynb  ml-team-challenge.ipynb  multiclass-balanced-walkthrough.ipynb  pixi.toml  practice-assignment-regression-deep-dive.ipynb  recommendation-systems.ipynb  regression-algorithms-walkthrough.ipynb  sample.ipynb  simple_housing.csv  unsupervised-learning-walkthrough.ipynb
nnpytorch/: mnist_model.pth  pixi.toml  trainmnist.py
unit-2/: davidfekke-unit2-capstone.ipynb  missle.py  pixi.toml  shopsmart_sales.csv
unit-3/: davidfekke-capstone-unit-3.ipynb  (+1 more)
(+30 files in other folders)
