[project]
authors = [{name = "davidfekke", email = "david@fekke.com"}]
dependencies = []
name = "lesson-06"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
lesson_06 = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.12.*"
jupyter = ">=1.1.1,<2"
ipykernel = ">=7.1.0,<8"
pandas = ">=2.3.3,<3"
numpy = ">=2.3.4,<3"
matplotlib = ">=3.10.8,<4"
