[project]
authors = [{name = "davidfekke", email = "david@fekke.com"}]
dependencies = []
name = "lesson-12"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.feature.gpu.system-requirements]
cuda = "12.0"

[tool.pixi.pypi-dependencies]
lesson_12 = { path = ".", editable = true }
# torch = { version = ">=2.5.1", index = "https://download.pytorch.org/whl/cu124" }
# torchvision = { version = ">=0.20.1", index = "https://download.pytorch.org/whl/cu124" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.12.*"
ipykernel = ">=7.1.0,<8"
jupyter = ">=1.1.1,<2"
pandas = ">=2.3.3,<3"
numpy = ">=2.3.5,<3"
matplotlib = ">=3.10.8,<4"
pytorch = "*"
scikit-learn = ">=1.7.2,<2"

[tool.pixi.environments]
gpu = ["gpu"]

[tool.pixi.target.osx.pypi-dependencies]
# OSX has no CUDA support so use the CPU here
torch = { version = ">=2.5.1", index = "https://download.pytorch.org/whl/cpu" }
torchvision = { version = ">=0.20.1", index = "https://download.pytorch.org/whl/cpu" }
