[project]
authors = [{name = "davidfekke", email = "david@fekke.com"}]
dependencies = []
name = "lesson-13"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
lesson_13 = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.12.*"
ipykernel = ">=7.1.0,<8"
jupyter = ">=1.1.1,<2"
pandas = ">=2.3.3,<3"
numpy = ">=2.3.5,<3"
matplotlib = ">=3.10.8,<4"
scikit-learn = ">=1.7.2,<2"
